add unit test example 1

--- a/models/staging/jaffle_shop/stg_jaffle_shop.yml
+++ b/models/staging/jaffle_shop/stg_jaffle_shop.yml
@@ -4,17 +4,17 @@ models:
   - name: stg_customers
     columns: 
       - name: customer_id
-        tests:
+        data_tests:
           - unique
           - not_null
   - name: stg_orders
     columns: 
       - name: order_id
-        tests:
+        data_tests:
           - unique
           - not_null
       - name: status
-        tests:
+        data_tests:
           - accepted_values:
               values:
                 - completed
@@ -23,7 +23,7 @@ models:
                 - placed
                 - return_pending
       - name: customer_id
-        tests:
+        data_tests:
           - relationships:
               to: ref('stg_customers')
               field: customer_id
