--- a/models/staging/jaffle_shop/unit_tests.yml
+++ b/models/staging/jaffle_shop/unit_tests.yml
@@ -25,11 +25,28 @@ unit_tests:
     model: stg_orders
     overrides:
       macros:
-        current_timestamp: "date('2023-01-15')"
+        current_timestamp: "date('2024-01-15')"
     given:
       - input: source('jaffle_shop',  'orders')
         rows:
-          - {order_date: 2023-01-01}
+          - {order_date: 2024-01-01}
     expect:
       rows:
-        - {order_date: 2023-01-01, days_since_ordered: 14}
+        - {order_date: 2024-01-01, days_since_ordered: 14}
+
+  - name: test_full_name
+    description: Test my full_name caluclation 
+    model: stg_customers
+    given:
+      - input: source('jaffle_shop',  'customers')
+        rows:
+          - {first_name: Grace,     last_name: Goheen}
+          - {first_name: MICHELLE,  last_name: ARK}
+          - {first_name: gerda,     last_name: shank}
+          - {first_name: DoUg,     last_name: BeAtTy}
+    expect:
+      rows:
+        - {full_name: Grace Goheen}
+        - {full_name: Michelle Ark}
+        - {full_name: Gerda Shank}
+        - {full_name: Doug Beatty}
